test_regress/t/t_castdyn_run_bad.out
[0] %Error: t_castdyn_run_bad.v:35: Assertion failed in top.t: '$cast' failed.
%Error: t/t_castdyn_run_bad.v:35: Verilog $stop
Aborting...
